2006-11-01  Mike Cvet  <mcvet@redhat.com>

	* SourceWindow.java (toggleThreadDialog): Removed HashSet
	intialization and moved it to the constructor.
	(doStop): Remove all threads from the runningThreads
	HashSet and then block them.
	(unblockProc): Add all threads to runningThreads, unless
	they're already running via other means.

2006-10-31  Mike Cvet  <mcvet@redhat.com>

	* CurrentStackView.java (CurrentStackView): Updated to use
	StackFrame.toPrint().
	* ThreadSelectionDialog.java (ThreadSelectionDialog): Created
	new SourceWindow variable.
	(.buttonEvent): Call SourceWindow callbacks upon button events
	and window closure.
	* SourceWindowFactory.java (getFunctionXXX): Removed debug
	printing.
	* SourceWindow.java (runningThreads): Changed from a HashMap
	to a HashSet.
	(unblockProc): Moved observer boolean reset call out of the loop.
	(doStop): Calls requestAdd() instead of requestAddObservers().
	(toggleThreadDialog): Removed LifeCycleListener, handled now by
	the ThreadSelectionDialog.
	(executeThreads): Cleaned up to work with HashSet. Fixed iterator
	removal problem. Added check to see if all Tasks are being blocked
	to avoid non-blocking problem.

2006-10-27  Mike Cvet <mcvet@redhat.com>

	* SourceBuffer.java (loadFile): Check all StackFrames during
	the first initialization for debuginfo.
	* SourceWindow.java (createActions): Create the toggleAction
	for the thread dialog.
	(toggleThreadDialog): Added.
	(executeThreads): Added. Handles independant thread stopping
	and starting.
	* SourceWindowFactory (finishSourceWin): Removed DOMFrysk 
	initialization code. Moved to generateProcStackTrace.
	(generateProcStackTrace): Re-arranged DOMFrysk initialization
	and stack backtrace generation. DOMFrysk now takes a StackFrame.
	Better handling of traces with some frames missing debuginfo.
	Fixes #212434.
	* ThreadSelectionDialog.java: New class. Dialog window for thread
	stopping and starting.

2006-10-26  Mike Cvet  <mcvet@redhat.com>
